<resources>
    <string name="tab_menu_alert">首页</string>
    <string name="tab_menu_profile">购彩大厅</string>
    <string name="tab_menu_pay">开奖走势</string>
    <string name="tab_menu_setting">我的信息</string>
    <string name="hello">欢迎来到娱乐世界!</string>
    <string name="app_name">娱乐世界</string>
    <string name="pop_up_tips_string"> </string>
    <string name="is_exit">退出</string>
    <string name="is_positive">确认选号</string>
    <string name="is_negative">取消</string>
    <string name="is_loading">加载中……</string>
    <string name="is_lottery_money_limit">单注投注额不得大于20000元</string>
    <string name="action_settings">单注投注额不得大于20000元</string>
    <string name="nb_login_title_str">娱乐世界登录</string>
    <string name="nb_enroll_link">新用户注册</string>
    <string name="is_username">用户名:</string>
    <string name="is_regist_password">密     码:</string>
    <string name="is_auto_login">自动登录</string>
    <string name="nb_remember_password_label">记住密码</string>
    <string name="nb_login_button_label">登录</string>
    <string name="nb_wait_button_label">稍等片刻...</string>
    <string name="nb_onlineservice_link">在线客服</string>
    <string name="is_user_loginned_test">您好：132632***** \n余额：100.00元</string>
    <string name="is_user_loginned_notice" formatted="false">您好：T% \n余额：M%元</string>
    <string name="is_user_loginned" formatted="false">您好：N% \n余额：M%元</string>
    <string name="is_ssq_default_notice">双色球加奖了，两亿元大派送！</string>
    <string name="is_hall_common_summary">今日第&#160;ISSUE&#160;期WAIT截止&#160;&#160;&#160;</string>
    <string name="is_hall_common_issue">第ISSUE期</string>
    <string name="is_hall_summary_default">数据加载中……</string>
    <string name="is_hall_ssc_assemble_point_6">请选择3-8个号码</string>
    <string name="is_hall_ssc_assemble_point_3">请选择2-10个号码</string>
    <string name="is_hall_ssc_notlocate_point">请选择任意1个以上号码</string>
    <string name="is_hall_ssc_assemble_point">请选择2个或2个以上号码</string>
    <string name="is_hall_syfive_assemble_one_point">请选择1个或1个以上号码。</string>
    <string name="is_hall_syfive_assemble_two_point">请选择2个或2个以上号码</string>
    <string name="is_hall_syfive_assemble_three_point">请选择3个或3个以上号码</string>
    <string name="is_hall_syfive_assemble_four_point">请选择4个或4个以上号码</string>
    <string name="is_hall_syfive_assemble_fives_point">请选择5个或5个以上号码</string>
    <string name="is_hall_syfive_assemble_six_point">请选择6个或6个以上号码</string>
    <string name="is_hall_syfive_assemble_seven_point">请选择7个或7个以上号码。</string>
    <string name="is_hall_syfive_assemble_eight_point">请选择8个或8个以上号码</string>
    <string name="is_hall_ssq_title">两元获500万 每周二 四 六开奖</string>
    <string name="is_hall_ssq_pool">奖池M%元</string>
    <string name="is_hall_3d_title">10选3中1000元 每天20:30开奖</string>
    <string name="is_hall_qlc_title">百万奖期期开 每周一 三 五开奖</string>
    <string name="is_category_hall">购彩大厅</string>
    <string name="is_lottery_hall">开奖公告</string>
    <string name="is_eleven_selected_five_one_label">第一位</string>
    <string name="is_eleven_selected_five_two_label">第二位</string>
    <string name="is_eleven_selected_five_three_label">第三位</string>
    <string name="is_ssq_title_default">双色球选号</string>
    <string name="is_ssq_title">双色球第ISSUE期</string>
    <string name="is_ssq">双色球</string>
    <string name="is_random_red">机选红球</string>
    <string name="is_random_blue">机选篮球</string>
    <string name="is_ssc_wan_title">万位</string>
    <string name="is_ssc_qian_title">千位</string>
    <string name="is_ssc_bai_title">百位</string>
    <string name="is_ssc_shi_title">十位</string>
    <string name="is_ssc_ge_title">个位</string>
    <string name="is_ssc_random">机选一注</string>
    <string name="is_play_default_moneymode_unit">元</string>
    <string name="is_play_jiao_moneymode_unit">角</string>
    <string name="is_play_feng_moneymode_unit">分</string>
    <string name="is_user_loginning">登陆中请等候……</string>
    <string name="is_ssc_bottom_choose_betsdigit_title">注数：</string>
    <string name="is_ssc_bottom_choose_money_title">金额：</string>
    <string name="is_ssq_default_choose_notice">0</string>
    <string name="is_need_to_chose">您还需要选择NUM个</string>
    <string name="is_ball_red">红球</string>
    <string name="is_ball_blue">蓝球</string>
    <string name="is_play_bottom_title">   共 NUM  注   MONEY  元   </string>
    <string name="is_shopping_list_notenum_title">NOTE&#160;注</string>
    <string name="is_shopping_list_money_title">MONEY&#160;元</string>
    <string name="is_shopping_list_mode_title">MODE&#160;模式</string>
    <string name="is_shopping_list_title" formatted="false">N% I%期</string>
    <string name="is_shopping_list_money" formatted="false"><![CDATA[共&#160;&#160;<font color="#ff0000">MONEY</font>&#160;&#160;元]]></string>
    <string name="is_shopping_list_Append" formatted="false"><![CDATA[追&#160;&#160;<font color="#ff0000">PERIOD</font>&#160;&#160;期]]></string>
    <string name="is_shopping_list_notice" formatted="false"><![CDATA[<font color="#ff0000">NUM</font>注&#160;&#160;<font color="#ff0000">ISSUE</font>&#160;期&#160;<font color="#ff0000">BERS</font>&#160;倍]]></string>
    <string name="is_shopping_list_betting_notice" formatted="false"><![CDATA[&#160;&#160;选号:注数&#160;&#160;<font color="#ff0000">NUM</font>&#160;&#160;注,金额&#160;&#160;<font color="#ff0000">MONEY</font>&#160;&#160;元, 倍数&#160;&#160;<font color="#ff0000">MUL</font>&#160;倍]]></string>
    <string name="is_shopping_list_betting_num" formatted="false"><![CDATA[注数：&#160;&#160;<font color="#ff0000">NUM</font>&#160;&#160;注]]></string>
    <string name="is_shopping_list_betting_money" formatted="false"><![CDATA[金额：&#160;&#160;<font color="#ff0000">MONEY1</font>元&#160;&#160;余额：&#160;&#160;<font color="#ff0000">MONEY2</font>元]]></string>
    <string name="is_login_notice1">温馨提示：娱乐世界网站用户可以直接登录</string>
    <string name="is_forget_password_notice">您遗忘登录密码时可登录娱乐世界网站（www.newbee.net）找回，或致新蜂娱乐在线客服索回密码！</string>
    <string name="my_selfhall_lotteryticket">我的彩票</string>
    <string name="my_selfhall_fundsflow">我的彩票</string>
    <string name="my_info_title">用户信息</string>
    <string name="is_notice_info_title">公告资讯</string>
    <string name="is_oneself_info_title">私人信息</string>
    <string name="is_ssc_history_lottery_table_title_1">开奖期号</string>
    <string name="is_ssc_history_lottery_table_title_2">开奖号码</string>
    <string name="is_shopping_button_random">机选</string>
    <string name="is_shopping_button_optional">自选号码</string>
    <string name="is_shopping_button_clear">清空列表</string>
    <string name="is_shopping_button_chase">智能追号</string>
    <string name="is_shopping_button_betting">投注</string>
    <string name="is_shopping_lable_continuous">追号</string>
    <string name="is_shopping_lable_alloted">期</string>
    <string name="is_shopping_lable_betting">投</string>
    <string name="is_shopping_lable_multiple">倍</string>
    <string name="is_shopping_lable_appendsettings">中奖后停止追号</string>
    <string name="is_shopping_alert_dialog_clear">清除</string>
    <string name="is_shopping_alert_dialog_save">保存</string>
    <string name="is_shopping_alert_dialog_return">返回选号</string>
    <string name="is_shopping_alert_dialog_cancel">取消</string>
    <string name="is_appendbetting_head_title_label">智能追号</string>
    <string name="is_appendbetting_head_cancel_label">取消</string>
    <string name="is_appendbetting_serial_number_label">序号</string>
    <string name="is_appendbetting_issue_number_label">期号</string>
    <string name="is_appendbetting_multiple_label">倍数</string>
    <string name="is_appendbetting_issuesetting_label">期数</string>
    <string name="is_appendbetting_generate_label">生成</string>
    <string name="is_appendbetting_grandtotal_label">累计投入</string>
    <string name="is_appendbetting_winning_label">中奖盈利</string>
    <string name="is_appendbetting_profitability_label">盈利率</string>
    <string name="is_appendsettings_numberlist_label">号码列表</string>
    <string name="is_appendsettings_button_betting">付款</string>
    <string name="is_appendbetting_prompt_label">&#160;&#160;全程最低盈利率NUM</string>
    <string name="is_top_sales_issuelabel">距ISSUE期截止：</string>
    <string name="is_playssc_lastissue_wait_label">ISSUE&#160;&#160;期等待开奖&#160;&#160;NUMBER</string>
    <string name="is_playssc_lastissue_already_label">ISSUE&#160;&#160;期开奖号&#160;&#160;NUMBER</string>
    <string name="is_playssc_salesissue_label">ISSUE期销售截止</string>
    <string name="is_playssc_sales_timelabel">TIME</string>
    <string name="is_history_details_issue_label">第ISSUE期</string>
    <string name="is_detail_username_label">游戏用户</string>
    <string name="is_detail_kind_label">游戏</string>
    <string name="is_detail_issue_label">奖期</string>
    <string name="is_detail_playmethod_label">玩法</string>
    <string name="is_detail_mode_label">模式</string>
    <string name="is_detail_money_label">投注金额</string>
    <string name="is_detail_fpoint_label">返点</string>
    <string name="is_detail_bonus_label">奖金</string>
    <string name="is_detail_bettingstatus_label">注单状态</string>
    <string name="is_detail_buytime_label">投注时间</string>
    <string name="is_detail_lotteryno_label">开奖号码</string>
    <string name="is_detail_buynumber_label">投注号码</string>
    <string name="is_detail_money_unit_label">UNIT元</string>
    <string name="is_settings_title_label">设置</string>
    <string name="is_binding_info_bank_url">http://apis.haoservice.com/lifeservice/bankcard/query</string>
    <string name="is_bindinfo_bank_notice1">温馨提示：以下银行信息不正确会导致提现出错！请检查信息</string>
    <string name="is_currency_card_tip">日累计转出金额最少MINMONEY最多小于等于MAXMONEY元TIME</string>
    <string name="is_maximum_rollout">今天还可以转出BOUT次&#160;&#160; 您的余额:BALANCE元</string>
    <string name="is_userinfo_bank_tail_number">尾号 NUMBER</string>
    <string name="is_userinfo_bank_lessthan_balance">建议转出NUMBER元以上金额 </string>
    <string name="is_userinfo_bank_morethan_balance">本次最多转出NUMBER元 </string>
    <string name="is_client_version_no">版本号:VERSION</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="action_refresh">Refresh</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="is_bind_mycard_prompt_verify">温馨提示：如需绑定新卡请验证您的旧卡信息</string>
    <string name="is_mobile_shakes_lable">手机摇一摇机选</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="is_betting_prompt_title" formatted="false"><![CDATA[<font color="#ff0000">LOTTERYNAME</font>&#160;&#160;第&#160;ISSUE&#160;期<br>总注数:NOTE]]></string>
    <string name="is_betting_prompt_pursue" formatted="false"><![CDATA[总注数:NOTE<br>追PERIOD期<br>总金额]]></string>
    <string name="is_betting_prompt_nothing" formatted="false"><![CDATA[总注数:NOTE<br>总金额]]></string>
    <string name="is_home_ico_mune_label">购彩大厅</string>
    <string name="is_newlottery_ico_mune_label">最新开奖</string>
    <string name="is_gamehistory_ico_mune_label">游戏记录</string>
    <string name="is_accountcenter_ico_mune_label">我的彩票</string>
</resources>