<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">
    <TextView
        android:id="@+id/nb_append_serial_number"
        android:layout_width="50dip"
        android:layout_height="35dip"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/is_appendbetting_serial_number_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"/>

	<LinearLayout
        android:id="@+id/nb_append_betting_head"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/nb_append_serial_number"
        android:focusable="false"
        android:orientation="horizontal" >

        <TextView
            style="@style/table_background_layout"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/is_appendbetting_issue_number_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/table_background_layout"
                android:layout_width="120dip"
                android:layout_height="35dip"
                android:gravity="center"
                android:text="@string/is_appendbetting_multiple_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            style="@style/table_background_layout"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/is_appendbetting_grandtotal_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
	
</LinearLayout>