<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/title_border_frame_top_shape"
            android:gravity="center"
            android:text="@string/title_alert"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:lineSpacingMultiplier="1.5"
                android:minHeight="50.0dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:paddingTop="15.0dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:background="@color/blackgray"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout android:id="@+id/negative_alert_negative_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/negativeButton"
                    style="@style/text_15_666666_sdw"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:background="@drawable/nb_fillet_gray_backdrop_button"
                    android:gravity="center"
                    android:text="@string/cancel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/positiveButton"
                    style="@style/text_15_ffffff_sdw"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:background="@drawable/nb_fillet_rosered_backdrop_button"
                    android:gravity="center"
                    android:text="@string/ok" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>